# phase

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  Tiltfile  rust-toolchain.toml
crates/engine/: Cargo.toml
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: lib.rs
crates/engine/src/: lib.rs  starter_decks.rs  testing.rs
crates/engine/src/ai_support/: candidates.rs  filter.rs  mod.rs
crates/engine/src/database/: card_db.rs  legality.rs  mod.rs  mtgjson.rs  oracle_loader.rs  synthesis.rs
crates/engine/src/database/forge/: effect.rs  translate.rs
crates/engine/src/game/: ability_utils.rs  arithmetic.rs  casting.rs  casting_costs.rs  casting_targets.rs  combat.rs  combat_damage.rs  commander.rs  companion.rs  cost_payability.rs  coverage.rs  deck_loading.rs  deck_validation.rs  derived.rs  derived_views.rs  devotion.rs  dungeon.rs  elimination.rs  engine.rs  engine_casting.rs  engine_combat.rs  engine_payment_choices.rs  engine_priority.rs  engine_replacement.rs  engine_resolution_choices.rs  engine_stack.rs  filter.rs  functioning_abilities.rs  game_object.rs  gap_analysis.rs  keywords.rs  layers.rs  log.rs  mana_abilities.rs  mana_payment.rs  mana_sources.rs  match_flow.rs  mod.rs  morph.rs  mulligan.rs  (+24 more)
crates/engine/src/game/effects/: adapt.rs  add_restriction.rs  additional_combat.rs  amass.rs  animate.rs  attach.rs  become_copy.rs  become_monarch.rs  bolster.rs  bounce.rs  cascade.rs  cast_from_zone.rs  change_zone.rs  choose.rs  choose_card.rs  choose_from_zone.rs  cleanup.rs  collect_evidence.rs  conjure.rs  connive.rs  copy_spell.rs  counter.rs  counters.rs  create_emblem.rs  deal_damage.rs  delayed_trigger.rs  dig.rs  discard.rs  discover.rs  double.rs  draw.rs  (+57 more)
crates/engine/src/parser/: mod.rs  oracle.rs  oracle_casting.rs  oracle_class.rs  oracle_classifier.rs  oracle_condition.rs  oracle_cost.rs  oracle_dispatch.rs  oracle_keyword.rs  oracle_level.rs  oracle_modal.rs  oracle_quantity.rs  oracle_replacement.rs  oracle_saga.rs  oracle_spacecraft.rs  oracle_special.rs  oracle_static.rs  oracle_target.rs  oracle_trigger.rs  oracle_util.rs  oracle_vote.rs
crates/engine/src/types/: ability.rs  actions.rs  card.rs  card_type.rs  counter.rs  definitions.rs  events.rs  format.rs  game_state.rs  keywords.rs  layers.rs  mana.rs  mod.rs  phase.rs  player.rs  proposed_event.rs  replacements.rs  statics.rs  triggers.rs  zones.rs
crates/engine/src/util/: deadline.rs  im_ext.rs  mod.rs
crates/engine/tests/: floodpits_drowner.rs  integration_bending.rs  integration_landfall.rs
crates/engine/tests/integration/: aura_on_player.rs  elusive_otter_repro.rs  engine_invariants.rs  exquisite_blood_routing.rs  gran_gran_integration.rs  greasefang_integration.rs  harrow_regression.rs  integration_adventure.rs  integration_bending.rs  integration_landfall.rs  json_smoke_test.rs  kaito_integration.rs  madame_null_integration.rs  main.rs  oracle_parser.rs  swans_prevention_followup.rs  ureni_attack_trigger.rs
crates/engine/tests/rules/: casting.rs  targeting.rs
crates/engine/tests/snapshots/: oracle_parser__snapshot_jace_the_mind_sculptor.snap  oracle_parser__snapshot_wizard_class.snap
crates/feed-scraper/: Cargo.toml
crates/feed-scraper/src/: main.rs
crates/phase-ai/: Cargo.toml
crates/phase-ai/src/: ability_chain.rs  auto_play.rs  card_hints.rs  cast_facts.rs  combat_ai.rs  config.rs  context.rs  decision_kind.rs  deck_knowledge.rs  deck_profile.rs  determinize.rs  lib.rs  projection.rs  search.rs  session.rs  synergy.rs  tactical_gate.rs  threat_profile.rs  tribute_eval.rs  zone_eval.rs
crates/phase-ai/src/duel_suite/: attribution.rs  compare.rs  mod.rs  run.rs  spec.rs
crates/phase-ai/src/features/: aggro_pressure.rs  aristocrats.rs  control.rs  landfall.rs  mana_ramp.rs  mod.rs  tokens_wide.rs  tribal.rs
crates/phase-ai/src/plan/: curves.rs  mod.rs
crates/phase-ai/src/planner/: mod.rs
crates/phase-ai/src/policies/: activation.rs  aggro_pressure.rs  anthem_priority.rs  anti_self_harm.rs  blight_value.rs  board_development.rs  board_wipe_telegraph.rs  card_advantage.rs  context.rs  copy_value.rs  downside_awareness.rs  effect_classify.rs  effect_timing.rs  etb_value.rs  evasion_removal_priority.rs  free_outlet_activation.rs  hand_disruption.rs  hold_mana_up.rs  interaction_reservation.rs  landfall_timing.rs  lethality_awareness.rs  life_total_resource.rs  mana_efficiency.rs  mod.rs  plus_one_counters.rs  ramp_timing.rs  reactive_self_protection.rs  recursion_awareness.rs  redundancy_avoidance.rs  registry.rs  sacrifice_value.rs  spellslinger_casting.rs  stack_awareness.rs  strategy_helpers.rs  sweeper_timing.rs  synergy_casting.rs  tempo_curve.rs  tokens_wide.rs  tribal_lord_priority.rs  tutor.rs
crates/phase-ai/tests/: ai_quality.rs  decision_trace.rs  duel_suite_attribution.rs  greasefang_bounded.rs  scenarios.rs
crates/phase-server/: Cargo.toml
crates/phase-server/src/: logging.rs  main.rs
crates/server-core/: Cargo.toml  build.rs
crates/server-core/src/: filter.rs  lib.rs  lobby.rs  protocol.rs  session.rs  starter_decks.rs
(+282 files in other folders)
