[package]
name = "engine-wasm"
version.workspace = true
edition = "2021"
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
engine = { path = "../engine" }
phase-ai = { path = "../phase-ai" }
rand = "0.9"
rand_chacha = "0.9"
wasm-bindgen = "0.2.114"
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
