[package]
name = "engine"
version.workspace = true
edition = "2021"
license.workspace = true

[features]
cli = ["tracing-subscriber"]
audit = ["toml"]
forge = []
proptest = ["dep:proptest"]

[dependencies]
serde = { workspace = true }
tracing = { workspace = true }
thiserror = "2"
rand = "0.9"
rand_chacha = "0.9"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
toml = { version = "0.8", optional = true }
proptest = { version = "1", optional = true }

nom = "8.0"
nom-language = "0.1"
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
web-time = "1"
im = { version = "15", features = ["serde"] }

[[bin]]
name = "coverage-report"
path = "src/bin/coverage_report.rs"

[[bin]]
name = "parser-gap-analyzer"
path = "src/bin/parser_gap_analyzer.rs"

[[bin]]
name = "oracle-gen"
path = "src/bin/oracle_gen.rs"
required-features = ["cli"]

[[bin]]
name = "rules-audit"
path = "src/bin/rules_audit.rs"
required-features = ["audit"]

[[bin]]
name = "card-data-validate"
path = "src/bin/card_data_validate.rs"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["json"] }
assert_matches = "1.5"
pretty_assertions = "1"
