[package]
name = "feed-scraper"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "feed-scraper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
serde = { workspace = true }
serde_json = "1"
