[package]
name = "phase-server"
version.workspace = true
edition = "2021"
license.workspace = true

[[bin]]
name = "phase-server"
path = "src/main.rs"

[dependencies]
server-core = { path = "../server-core" }
engine = { path = "../engine" }
phase-ai = { path = "../phase-ai" }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
http = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
