[package]
name = "server-core"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
engine = { path = "../engine" }
phase-ai = { path = "../phase-ai" }
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
